--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/BenjaminSeed/virtual-pet.git"
+    "url": "https://github.com/BenjaminSeed/virtual-pet.git"
   },
   "author": "Ben Seed benseed.bs@gmail.com",
   "license": "ISC",
